--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -19,11 +19,14 @@
 
 
     <script src="{% static "app1/js/jquery-3.2.0.min.js" %}"></script>
-    <script src="{% static 'app1/js/bootstrap.js' %}"></script>
 
-{#    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>#}
-{#    #}
+    <script src="{% static "app1/js/bootstrap.min.js" %}"></script>
     <script src="{% static 'app1/js/bootstrap-confirmation.js' %}"></script>
+
+    {#    <script src="{% static 'app1/js/bootstrap.js' %}"></script>#}
+
+    {#    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>#}
+    {#    #}
 
 
     <style>
